# razer-control

./: .gitignore  README.md  de.dalu_wins.RazerControl.desktop  install.sh  pyproject.toml  uninstall.sh
razer_control/: main.py
razer_control.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
razer_control/core/: fx.py  razer_manager.py
razer_control/ui/: device_page.py  placeholder_page.py  window.py
razer_control/ui/components/: color_picker.py  colors_group.py  general_group.py
